# node2vec

./: .gitignore  LICENSE  README.md  README_ORG.md  example.py  pyproject.toml  pytest.ini
graph2emb/: __init__.py  check_gensim.py  doc2vec.py  edges.py  graph2vec.py  keyedvectors.py  node2vec.py  parallel.py  utils.py  word2vec.py
node2vec/: node2vec.py  parallel.py
sample/: README.md  graph2vec_basic.py  node2vec_edge_embeddings.py  node2vec_from_edgelist.py
sample/data/: edgelist.txt
tests/: __init__.py  conftest.py  test_edges.py  test_graph2vec.py  test_node2vec.py  test_parallel.py
