[project]
name = "node2vec"
version = "0.5.0"
description = "Implementation of the node2vec algorithm"
authors = [
    {name = "elior", email = "elior.cohen.p@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.0",
    "joblib>=1.4.0",
    "networkx>=3.1.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
repository = "https://github.com/eliorc/node2vec"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
