[project]
name = "graph2emb"
version = "0.9.0"
description = "Implementation of the graph2vec algorithm"
authors = [
    {name = "Sangkon Heo", email = "sigmadream@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.0",
    "networkx>=3.1.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.1",
]

[project.urls]
repository = "https://github.com/sigmadream/graph2emb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph2emb"]

[tool.hatch.build.targets.sdist]
include = [
    "/graph2emb",
    "/tests",
    "/README.md",
    "/README_ORG.md",
    "/LICENSE",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
    "pluggy>=1.6.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",    
]
